# misc

./: README.md
ai/cppgrad/: CMakeLists.txt  broadcast.cpp  config.h.in  cppgrad.cpp  cppgrad_stack.cpp
ai/cppgrad/draw/: draw_dot.py  test_dot.json
ai/makemore/: makemoar1.ipynb  makemore.ipynb  makemore_3_torchy.ipynb  makemore_p4_ninja.ipynb  makemore_part_2.ipynb  makemore_part_3.ipynb
ai/micrograd/: ai.ipynb  notes.txt  requirements.txt
cpp/: CMakeLists.txt  alien.cpp  async.cpp  circularq.cpp  coin.cpp  future.cpp  interval.cpp  jthread.cpp  matrix01.cpp  mine.cpp  move.cpp  phone.cpp  potpourri.cpp  set.cpp  shortest_path_on_grid.cpp  tree.cpp
py/: node_depths.py  phone.py  qsort.py  remove_kth.py  river_sizes.py  serial.py  util.py  valid_subsequence.py
pybullet/: .gitignore  example.py  ffmpeg.bash
ros2/vidcamcode/: CMakeLists.txt  package.xml
ros2/vidcamcode/src/: vidcamcode.cpp
rpigstream/: udp.bash
sdlgl/: CMakeLists.txt  mine.cpp  mine.h  mine_gl.cpp  sdl.cpp  stb_image.h
sdlgl/glad/include/glad/: glad.h
sdlgl/glad/src/: glad.c
sdlgl/shaders/: frag.glsl  vert.glsl
solid/: fractionalized_nft.sol
web3/deploy/: .gitignore  Readme.md  call.js  compile.js  deploy.js  erc20token.js  erc20token.sol  fetch_traccar.js  index.js  package.json  photo_phone.js  swagger.yaml  token_server.js
web3/deploy/public/: deploy.html  index.html  mobility.html  qr.html  qr_redeem.html  token_api.html  token_example.html
web3/htmlcam/: .gitignore  package.json  photo_phone.js  readme.md  server.js
web3/htmlcam/public/: index.html  pc.html  phone.html
web3/solid/: my_nft.sol
